<resources>
    <string name="app_name">PickYourChoice</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="menu_home">Home</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_register_fragment">Login</string>
    <string name="signup_register_fragment">SignUp</string>
    <string name="profile_customer_id">Customer ID:</string>
    <string name="profile_login">Login</string>
    <string name="profile_signup">SignUp</string>
    <string name="profile_your_orders">Your Orders</string>
    <string name="profile_help">Help</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_invite_friends">Invite Friends</string>
    <string name="profile_about">About</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_login">Login</string>
    <string name="login_password">Password</string>
    <string name="login_your_email_address">Your Email Address</string>
    <string name="signup_your_email_address">Your Email Address</string>
    <string name="signup_password">Password</string>
    <string name="signup_terms_and_conditions">I have accepted the terms and conditions</string>
    <string name="signup_sign_up">Sign up</string>
    <string name="home_available">Available</string>
    <string name="home_recommended">Recommended</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>