<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".ui.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/login_email_address"
            android:layout_width="233dp"
            android:layout_height="46dp"
            android:autofillHints="@string/todo"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_your_email_address"
            android:inputType="textEmailAddress"
            android:textColorHint="#ccc"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="233dp"
            android:layout_height="46dp"
            android:layout_below="@id/login_email_address"
            android:layout_marginTop="32dp"
            android:autofillHints="@string/todo"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColorHint="#ccc"
            android:textSize="18sp" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="233dp"
            android:layout_height="46dp"
            android:layout_below="@id/login_password"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/login_login"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_btn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:text="@string/login_forgot_password"
            android:textSize="14sp" />
    </RelativeLayout>

</FrameLayout>