<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:padding="5dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/close_fragment"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_close" />

    <Button
        android:id="@+id/login_fragment"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/close_fragment"
        android:gravity="center"
        android:text="@string/login_register_fragment"
        android:textSize="18sp" />

    <Button
        android:id="@+id/signup_fragment"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/close_fragment"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/login_fragment"
        android:gravity="center"
        android:text="@string/signup_register_fragment"
        android:textSize="18sp" />

    <FrameLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/close_fragment" />

</RelativeLayout>