<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/profile_Image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/no_image" />

        <TextView
            android:id="@+id/details_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/profile_Image"
            android:text="@string/profile_customer_id"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/details_id"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/details_id"
            android:text=""
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_id"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/profile_Image"
            android:onClick="Login"
            android:text="@string/profile_login"
            android:textAlignment="center"
            android:textSize="12sp" />

        <Button
            android:id="@+id/signUp_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/details_id"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/login_button"
            android:onClick="SignUp"
            android:text="@string/profile_signup"
            android:textAlignment="center"
            android:textSize="12sp" />
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="Orders">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/profile_your_orders"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_forward" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="Help">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/profile_help"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_forward" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="Settings">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/profile_settings"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_forward" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="Invite">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/profile_invite_friends"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_forward" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/cardview_light_background"
        android:onClick="About">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:text="@string/profile_about"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableEndCompat="@drawable/ic_forward" />
    </androidx.cardview.widget.CardView>

</LinearLayout>